--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,11 @@ code {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    max-width: 700px;
+    max-width: 800px;
     width: 100%;
     text-align: center;
     margin-top: 200px;
+}
+.button:hover{
+  background-color: blue;
 }
